# streamlit_hello_app

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPENAI_CHAT_IMPLEMENTATION.md  README.md  README_TMDB_IMPLEMENTATION.md  config.toml.example  env.example  pyproject.toml  requirements.txt  run_app.py  start_app.sh
.cursor/: memory.md
.cursor/rules/: API_INTEGRATION_DEVELOPMENT.md  TMDB_API_DEVELOPMENT.md
docs/: DEVELOPMENT_GUIDE.md  QUICK_REFERENCE.md  TEST_DRIVEN_DEVELOPMENT.md  TMDB_MOVIE_SEARCH.md  TROUBLESHOOTING.md
scripts/: run_tmdb_tests.py
src/streamlit_hello_app/: __init__.py  components.py  components_simple.py  config.py  main.py  utils.py
src/streamlit_hello_app/modules/: __init__.py  about.py  chat.py  compound_interest.py  dashboard.py  data_explorer.py  movie_search.py  openai_service.py  tmdb_service.py
tests/: __init__.py  test_compound_interest.py  test_config.py  test_movie_search.py  test_openai_service.py  test_openai_utils.py  test_tmdb_service.py  test_tmdb_utils.py  test_utils.py
